fixed view and scrolling on mobile

--- a/src/components/Games/Games.scss
+++ b/src/components/Games/Games.scss
@@ -10,5 +10,6 @@
         display: flex;
         gap: 1.6vh;
         align-items: end;
+        touch-action: none;
     }
 }
